2005-04-25  Francois Dumont  <dums@stlport...>

	* stlport/stl/_time_facets.c: Fix __pos type in __match function and removed
	unused __max_pos definition and initialisation.
	
	* src/c_locale_win32/c_locale_win32.c: Add some cast to remove warnings.
	
	* stlport/stl/_moneraty.c: Fix __witdh definition to use streamsize rather
	than size_t to avoid warnings.

2005-04-25  Petr Ovtchenkov  <ptr@island...>

	* build/test/gcc.mak: workaround for [bug?] gmake, that sometimes loss
	increment of target-specific macro and, may be, under condition.
	Thanks Jeff Williams.

	* build/Makefiles/gmake/icc.mak: add icc 8.1 compiler-specific libs

	* build/Makefiles/gmake/icc.mak: detect icc version; add includes
	from compiler to include path

	* test/unit/cppunit/test_main.cpp, cppunit_mini.h: add option -x, run all
	except specified CLASS::TEST.

2005-04-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_ioerr.h: #error message modification thanks Michael Fink.
	
2005-04-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_istream.c: Fix _M_read_buffered function implementation, there
	used to be a wrong implicit conversion from streamsize to ptrdiff_t, which fail
	when sizeof(streamsize) > sizeof(ptrdiff_t). see 2005-04-21 Petr report.
	
	* test/unit/: Replaced all _STLP_NO_IOSTREAMS occurences with the STLport internal
	equivalent _STLP_USE_NO_IOSTREAMS. The first one is defined by the client while the
	second depends on the first and on the compiler abilities, makes the unit tests more
	portable.
	
	* stlport/stl/_cmath.h: Fix for Intel C++ compiler that also have all C math functions
	in global namespace.

2005-04-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.h: Extend the hashtable template methods extension
	to the method computing the bucket from the key thanks Dominik Siatkowski.
	
	* stlport/stl/_threads.h: Disable 64 bits portability warning for MSVC compilers.
	MSVC do not see that the called function comes from a macro that is different