@@ -1,3 +1,8 @@
+2005-04-26  Francois Dumont  <dums@stlport...>
+
+	* src/num_get_float.cpp: Fix mingwin support for 64bits integer type 
+	thanks Wlodek Szafran
+
 2005-04-25  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_time_facets.c: Fix __pos type in __match function and removed
